<resources>
    <string name="app_name">Delta</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="sql_exception">SQLiteException</string>
    <string name="login_failed">Login Failed</string>
    <string name="db_unavailable">Database is unavailable.</string>
    <string name="login_failed_message">Invalid username/password.</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="firstname_hint">First Name (Optional)</string>
    <string name="lastname_hint">Last Name (Optional)</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="user_error">Enter the username</string>
    <string name="pass_error">Enter the password</string>
    <string name="confirm_error">Enter the confirm password</string>
    <string name="pass_match_error">Password does not match</string>
    <string name="user_taken">Username already taken</string>
    <string name="profile_tab">Profile</string>
    <string name="home_tab">Home</string>
    <string name="activity_tab">Activity</string>
    <string name="exit">Exit</string>
    <string name="exit_message">Do you want to exit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="logout">Logout</string>
    <string name="logout_message">Do you want to logout?</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="search">Search</string>
    <string name="username_label">Username:</string>
    <string name="firstname_label">First Name:</string>
    <string name="lastname_label">Last Name:</string>
    <string name="password_label">Password:</string>
    <string name="delete_account">Delete Account</string>
    <string name="delete_message">Do you want to delete your account?</string>
    <string name="visible_on">password on</string>
    <string name="visible_off">password off</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="save">Save</string>
    <string name="activity_name">Activity Name</string>
    <string name="create_activity">Create Activity</string>
    <string name="add">Add</string>
    <string name="activity_error">Enter the activity name</string>
    <string name="delete_activity">Delete Activity</string>
    <string name="del_act_message">Do you want to delete the activity</string>
    <string name="delete_item">Delete Item</string>
    <string name="del_item_message">Do you want to delete the item?</string>
    <string name="act_name_taken">Activity name is already taken</string>
    <string name="warning_text">There are no selected activity</string>
    <string name="invalid_time">Invalid Time</string>
    <string name="end_datetime">End DateTime:</string>
    <string name="start_datetime">Start DateTime:</string>
    <string name="update_time">Update Time</string>
    <string name="channel_name">CHANNEL</string>
    <string name="channel_description">CHANNEL DESCRIPTION</string>
    <string name="notif_title">Ongoing Activities</string>
    <string name="help_title">USER GUIDE</string>
    <string name="question1">How to Update Profile?</string>
    <string name="answer1">1. Select the profile tab.\n2. Press the floating edit button.\n3. Edit and fill the required fields.\n4. Press \"SAVE\" to save changes or press back button to discard changes.</string>
    <string name="question2">How to Delete Profile?</string>
    <string name="answer2">1. Select the profile tab.\n2. Press the \"Delete Account\".\n3. Press \"YES\" to delete the account or \"NO\" to cancel.</string>
    <string name="question3">How to Insert Activity?</string>
    <string name="answer3">1. Select the home tab.\n2. Press the floating add button.\n3. Enter the activity name.\n4. Press \"ADD\" to insert activity or \"CANCEL\" to abort.</string>
    <string name="question4">How to Delete Activity?</string>
    <string name="answer4">1. Select the home tab.\n2. Press and hold an activity on the list.\n3. Press \"YES\" to delete the activity or \"NO\" to cancel.</string>
    <string name="question5">How to Insert Activity Time?</string>
    <string name="answer5">1. Select an activity on the home tab.\n2. The app will go to the activity tab.\n3. Press the floating add button on the activity tab.\n4. Set the date and time.\n5. The app will automatically insert the added item on the specified activity.</string>
    <string name="question6">How to Add End Datetime?</string>
    <string name="answer6">1. Select an activity on the home tab.\n2. Select an item with no end time on it.\n3. Set the date and time.\n4. The app will automatically insert the end time on the specified item.</string>
    <string name="question7">How to Update Activity Time?</string>
    <string name="answer7">1. Select an activity on the home tab.\n2. Select an item with having a start and end time.\n3. The update time dialog will appear.\n4. Press a button to edit start time or end time.\n5. Set the date and time.\n6. Press \"Save\" to save changes or \"CANCEL\" to discard changes.</string>
    <string name="question8">How to Delete Activity Time?</string>
    <string name="answer8">1. Select an activity on the home tab.\n2. Select an item to be deleted.\n3. Press \"YES\" to delete the item or \"NO\" to cancel.</string>
    <string name="question9">How to Logout?</string>
    <string name="answer9">1. Select the options menu.\n2. Press the logout button\n3. Press \"YES\" to logout or \"NO\" to cancel.\n4. The app will redirect you to the login screen.</string>
    <string name="about">About</string>
    <string name="developer">Developed by</string>
    <string name="build_version">Build version</string>
    <string name="notif_pref">notification</string>
    <string name="login_pref">auto-login</string>
    <string name="app_description">Time-based tracker application</string>
    <string name="register_success">Registration Successful!</string>
</resources>
