<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:key="@string/notif_pref"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="Enable notification"
        android:defaultValue="false"/>

    <SwitchPreference
        android:key="@string/login_pref"
        android:icon="@drawable/ic_exit_to_app_black_24dp"
        android:title="Enable auto-login"
        android:defaultValue="false"/>

    <PreferenceCategory
        android:key="about"
        android:title="@string/about">

        <Preference
            android:icon="@drawable/splash_icon"
            android:title="@string/app_name"
            android:summary="@string/app_description"/>

        <Preference
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/developer"
            android:summary="Rajan N. Elio"/>
        <Preference
            android:icon="@drawable/ic_build_black_24dp"
            android:title="@string/build_version"
            android:summary="1.69"/>

    </PreferenceCategory>
</PreferenceScreen>